WarmUp_04_html -Fixed these issues:  -- Page 1. When a user tries to drag one of items, the item moves below other items layer. What do you think for it? There would be a way it to move on top of other item.
-- Page 2. When a user tries to move an item to the right or down side,
the activity area is moving on left or top and shows scrollbars. The
moving area should be limited. 

-- Page 3. In some case, after clicking "OK" button on the feedback, it
shows scrollbars. There would be a way to eliminate the case.

--Page 4. When a feedback area has long contents, the height gets bigger
and lower item area moves down. And there is no scrollbar for the
feedback. Having fixed height and applying mCustomScrollbar in the
feedback area are recommended.

--- a/WarmUp_04_html/styles/WarmUp_04_dliLearn.css
+++ b/WarmUp_04_html/styles/WarmUp_04_dliLearn.css
@@ -112,12 +112,21 @@
     margin-left: 26px;
     margin-top: -2px;
 }
+
+#feedbackTextContainer{
+    /* background-color: blueviolet; */
+
+    height: 68px;
+    overflow: auto;
+}
+
 html body {
     background-color: #F5F5F5;
     color: #444444;
     font-family: Arial,Helvetica,sans-serif;
     letter-spacing: 2px;
     line-height: 20px;
+    overflow: hidden;
 }
 .roundCorners {
     border-radius: 0 0 0 0;
@@ -143,21 +152,21 @@ html body {
     float: left;
     left: 0;
     margin: 3px;
-    max-height: 87px;
-    min-height: 70px;
-    padding: 20px;
+    min-height: 90px;
+    padding: 10px;
     position: relative;
     top: 0;
-    width: 440px;
+    width: 461px;
     z-index: 0;
+    max-height: 90px;
 }
 #feedbackHeader {
     font-size: 20px;
     letter-spacing: 2px;
-    margin-top: -13px;
+    margin: 0px;
 }
 #feedbackText {
-    margin-top: -13px;
+    margin: 8px 0px 0px 0px;
 }
 #feedbackBtn {
     bottom: 10px;
